Make UKM unaffected by the state of the MetricsReporting Feature.

This CL currently has a broken test as I cannot currently easily disable a feature (need to disable MetricsReporting in test). Since it's orthoganal, we can review the rest.

Bug: 767192

Bug:
Change-Id: Ibea39c5a94c36d8c7c67672ee7fc380f50fa7acb