components/metrics_services_manager/metrics_services_manager.cc
@@ -21,7 +21,10 @@ namespace metrics_services_manager {
 
 MetricsServicesManager::MetricsServicesManager(
     std::unique_ptr<MetricsServicesManagerClient> client)
-    : client_(std::move(client)), may_upload_(false), may_record_(false) {
+    : client_(std::move(client)),
+      may_upload_(false),
+      may_record_(false),
+      consent_given_(false) {
   DCHECK(client_);
 }
 
@@ -81,10 +84,12 @@ MetricsServicesManager::GetMetricsServiceClient() {
 }
 
 void MetricsServicesManager::UpdatePermissions(bool current_may_record,
+                                               bool current_consent_given,
                                                bool current_may_upload) {
   DCHECK(thread_checker_.CalledOnValidThread());
-  // If the user has opted out of metrics, delete local UKM state.
-  if (may_record_ && !current_may_record) {
+  // If the user has opted out of metrics, delete local UKM state. We Only check
+  // consent for UKM.
+  if (consent_given_ && !current_consent_given) {
     ukm::UkmService* ukm = GetUkmService();
     if (ukm) {
       ukm->Purge();
@@ -93,10 +98,9 @@ void MetricsServicesManager::UpdatePermissions(bool current_may_record,
   }
 
   // Stash the current permissions so that we can update the RapporServiceImpl
-  // correctly when the Rappor preference changes.  The metrics recording
-  // preference partially determines the initial rappor setting, and also
-  // controls whether FINE metrics are sent.
+  // correctly when the Rappor preference changes.
   may_record_ = current_may_record;
+  consent_given_ = current_consent_given;
   may_upload_ = current_may_upload;
   UpdateRunningServices();
 }
@@ -138,7 +142,8 @@ void MetricsServicesManager::UpdateUkmService() {
       client_->IsMetricsReportingForceEnabled() ||
       metrics_service_client_->IsHistorySyncEnabledOnAllProfiles();
   bool is_incognito = client_->IsIncognitoSessionActive();
-  if (may_record_ && sync_enabled & !is_incognito) {
+
+  if (consent_given_ && sync_enabled & !is_incognito) {
     ukm->EnableRecording();
     if (may_upload_)
       ukm->EnableReporting();
@@ -151,9 +156,13 @@ void MetricsServicesManager::UpdateUkmService() {
 }
 
 void MetricsServicesManager::UpdateUploadPermissions(bool may_upload) {
-  UpdatePermissions((client_->IsMetricsReportingForceEnabled() ||
-                     client_->IsMetricsReportingEnabled()),
-                    client_->IsMetricsReportingForceEnabled() || may_upload);
+  if (client_->IsMetricsReportingForceEnabled()) {
+    UpdatePermissions(true, true, true);
+    return;
+  }
+
+  UpdatePermissions(client_->IsMetricsReportingEnabled(),
+                    client_->IsMetricsConsentGiven(), may_upload);
 }
 
 }  // namespace metrics_services_manager
