ios/chrome/browser/metrics/ios_chrome_metrics_services_manager_client.h
@@ -44,6 +44,8 @@ class IOSChromeMetricsServicesManagerClient
 
   net::URLRequestContextGetter* GetURLRequestContext() override;
   bool IsMetricsReportingEnabled() override;
+  bool IsMetricsReportingEnabledIgnoringFeature() override;
+
   bool IsIncognitoSessionActive() override;
 
   // Gets the MetricsStateManager, creating it if it has not already been
