ios/chrome/browser/metrics/ios_chrome_metrics_services_manager_client.mm
@@ -99,6 +99,11 @@ bool IOSChromeMetricsServicesManagerClient::IsMetricsReportingEnabled() {
   return enabled_state_provider_->IsReportingEnabled();
 }
 
+bool IOSChromeMetricsServicesManagerClient::
+    IsMetricsReportingEnabledIgnoringFeature() {
+  return enabled_state_provider_->IsConsentGiven();
+}
+
 metrics::MetricsStateManager*
 IOSChromeMetricsServicesManagerClient::GetMetricsStateManager() {
   DCHECK(thread_checker_.CalledOnValidThread());
